# cypher-character-creator

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: flake_ci.yml  update_flake.yml
cypher_character_frontend/: Cargo.toml  README.md
cypher_character_frontend/src/: main.rs
cypher_character_frontend/templates/: another-page.html  base.html  character-sheet.html  hello.html
cypher_character_frontend/templates/character/: edit.html  sentence.html  sheet.html  view.html
cypher_character_model/: Cargo.toml
cypher_character_model/src/: lib.rs
